# Tg-crypto-bot

./: .gitignore  bot_handlers.py  bot_instance.py  config.py  data_fetcher.py  indicators_calculator.py  main.py  metrics_calculator.py  news_fetcher.py  notification.py  plot_creator.py  pyproject.toml
